<resources>
    <string name="app_name">HoreApps</string>
    <string name="Uname">Username</string>
    <string name="Pass">Password</string>
    <string name="ConfPass">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="Cancel">Cancel</string>
    <string name="Regist">Register</string>
    <string name="Nama">Full Name</string>
    <string name="Email">Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_home">Home</string>
    <string name="nav_help">Help</string>
    <string name="nav_history">History</string>
    <string name="nav_profil">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
