<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.awl.horeapps.Login"

    android:background="@drawable/back_login"
    android:orientation="vertical" android:weightSum="1">

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="221dp"
        android:ems="12"
        android:hint="@string/Uname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edUsername"
        android:layout_below="@+id/edUsername"
        android:layout_marginTop="24dp"
        android:ems="12"
        android:hint="@string/Pass"
        android:inputType="textPassword" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edPassword"
        android:layout_below="@+id/edPassword"
        android:text=" Dont have an account? "
        android:textSize="13dp"
        android:textColor="#ffffff"
        android:id="@+id/ket" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edPassword"
        android:layout_toEndOf="@+id/ket"
        android:text="Sign Up!"
        android:textSize="13dp"
        android:textColor="#e53935" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ket"
        android:layout_below="@+id/ket"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:background="#556270"
        android:text="@string/Login" />

    <Button
        android:id="@+id/bCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bLogin"
        android:layout_alignBottom="@+id/bLogin"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/ket"
        android:background="#556270"
        android:text="@string/Cancel" />

</RelativeLayout>
